# SlackChatbot_like_ChatGPT

./: .gitignore  README.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: _tf_plan.yml  tf_plan_dev.yml
applications/davinci-bot/src/: main.py  requirements.txt
applications/davincibot/src/: main.py
applications/header-test/: main.py
applications/scripts/: import_existing_resource.sh
applications/slackbot_chatgpt/src/: main.py  requirements.txt
applications/src/: main.py
img/: architecture.drawio
scripts/: import_existing_resource.sh
terraform/: backend.tf  main.tf  variables.tf
terraform/davinci_bot/: backend.tf  main.tf  variables.tf
terraform/dev/: backend.tf
terraform/gcp_eng/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
terraform/slackbot_chatgpt/: .terraform.lock.hcl  main.tf  terraform.tfstate  variables.tf
test/src/: .env.yaml  main.py  requirements.txt
